# coffeelaw

./: CHANGELOG.md  COFFEE_LAWS_VISUAL_GUIDE.md  CONTRIBUTING.md  LICENSE  Makefile  OPENAI_EMBEDDINGS_SUMMARY.md  README.md  VERIFICATION_RESULTS.md  coffee_law_sweep_demo.py  coffee_laws_paper.tex  embedding_workflow_explanation.md  implementation_fixes_summary.md  power_law_exploration.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_coffee_law_verification.py  test_embedding_fix.py  test_quick_verification.py
coffee_law_verifier/: ENGINEERING_GUIDE.md  README.md  __init__.py  config.py  requirements.txt  run_16k_verification.py  run_verification.py  run_with_openai.sh  setup.py  test_model_providers.py
coffee_law_verifier/analysis/: __init__.py  diagnostic_analyzer.py  power_law_analyzer.py  verification_suite.py
coffee_law_verifier/context_engine/: __init__.py  chunk_processor.py  context_variator.py  pe_calculator.py
coffee_law_verifier/data/: tasks.json
coffee_law_verifier/measurement/: __init__.py  anthropic_embedding_client.py  embedding_analyzer.py  entropy_measurer.py  gemini_embedding_client.py  metrics_calculator.py  openai_embedding_client.py  width_measurer.py
coffee_law_verifier/monte_carlo/: __init__.py  experiment_protocols.py  monte_carlo_runner.py  task_generator.py
coffee_law_verifier/visualization/: __init__.py  coffee_law_visualizer.py  interactive_dashboard.py  report_generator.py
reports/coffee_law_verification_20250830_124602/: report.html
reports/coffee_law_verification_20250830_124741/: report.html
reports/coffee_law_verification_20250830_124915/: report.html
reports/coffee_law_verification_20250830_125018/: report.html
reports/coffee_law_verification_20250830_125052/: report.html
reports/coffee_law_verification_20250830_125132/: report.html
reports/coffee_law_verification_20250830_125213/: report.html
reports/coffee_law_verification_20250830_125510/: report.html
reports/coffee_law_verification_20250830_125608/: report.html
reports/coffee_law_verification_20250830_125624/: report.html
reports/coffee_law_verification_20250830_125644/: report.html
reports/coffee_law_verification_20250830_125942/: report.html
reports/coffee_law_verification_20250830_131737/: report.html
reports/coffee_law_verification_20250830_145055/: report.html
reports/coffee_law_verification_20250830_145125/: report.html
reports/coffee_law_verification_20250830_145244/: report.html
reports/coffee_law_verification_20250830_145637/: report.html
reports/coffee_law_verification_20250830_145808/: report.html
reports/coffee_law_verification_20250830_145833/: report.html
reports/coffee_law_verification_20250830_150011/: report.html
reports/coffee_law_verification_20250830_150057/: report.html
reports/coffee_law_verification_20250830_150135/: report.html
reports/coffee_law_verification_20250830_150326/: report.html
reports/coffee_law_verification_20250830_151649/: report.html
reports/coffee_law_verification_20250830_151732/: report.html
reports/coffee_law_verification_20250830_151804/: report.html
reports/coffee_law_verification_20250830_155559/: report.html
reports/coffee_law_verification_20250830_160452/: report.html
reports/coffee_law_verification_20250830_162701/: report.html
reports/coffee_law_verification_20250830_164630/: report.html
(+41 files in other folders)
